syntax = "proto3";

package greet;

option go_package = "github.com/watariRyo/gRPC-study/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    // Unary streaming
    rpc Greet (GreetRequest) returns (GreetResponse);
    // Server streaming
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
    // Client streaming
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);
    // Bi Directional streaming
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
    // Deadline
    rpc GreetWithDeadline (GreetRequest) returns (GreetResponse);
}